fix(basket): set max height and overflow for basket

--- a/src/pages/api-operation-page/styles.scss
+++ b/src/pages/api-operation-page/styles.scss
@@ -22,19 +22,23 @@
 .basket {
   position: fixed;
   right: 0;
-  top: 0;
+  top: 50px;
   padding: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin: 20px;
+  margin: 0 20px 20px 20px;
   z-index: 1000;
   background-color: white;
   border-radius: 20px;
   border: 2px solid black;
+}
+
+.basket-content {
   max-height: 500px;
   overflow-y: auto;
+  width: 100%;
 }
 .basket-item {
   display: flex;
